# abode-security

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  NOTES_abode_fix.txt  README.md  TROUBLESHOOTING.md  conftest.py  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_dev.txt
.claude/: CURRENT_SESSION.md  DEBUGGING_STEPS.md  ENABLE_DEBUG_LOGGING.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  NEXT-SESSION-GUIDE.md  NEXT_SESSION.md  PHASE-2-COMPLETION.md  PHASE_2.5_REVIEW.md  PHASE_3_MINOR_OBSERVATIONS.md  PHASE_3_PLAN.md  PHASE_4B_COMPLETION.md  PHASE_4_PLAN.md  PHASE_4_QUICK_START.md  PHASE_5_MASTER_SUMMARY.md  PHASE_5_PLAN.md  PROJECT_STATUS.md  README.md  README_PHASE_5.md  REVIEW_AND_PLAN_SUMMARY.md  SESSION-INDEX.md  START_HERE.md  phase-2-5-guide.md  phase-2-guide.md  quick-ref.md  session-start.md
.claude/plans/: 2025-12-3-improvements.md
.githooks/: pre-commit
.github/workflows/: tests.yaml  validate.yaml
custom_components/abode_security/: __init__.py  _vendor.py  alarm_control_panel.py  async_wrapper.py  binary_sensor.py  camera.py  config_flow.py  const.py  cover.py  decorators.py  diagnostics.py  entity.py  exceptions.py  light.py  lock.py  manifest.json  models.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/abode_security/abode/: automation.py  cli.py  client.py  event_controller.py  settings.py  socketio.py
custom_components/abode_security/translations/: en.json
custom_components/lib/: __init__.py
docs/: ASYNC_AWAIT_PATTERNS.md  CODE_REVIEW_2025_11_25.md
lib/jaraco/abode/: client.py  (+1 more)
tests/: __init__.py  common.py  conftest.py  test_advanced_features.py  test_alarm_control_panel.py  test_async_await_verification.py  test_async_static_analysis.py  test_binary_sensor.py  test_camera.py  test_client_error_handling.py  test_client_url_construction.py  test_cms_settings_switches.py  test_config_flow.py  test_constants.py  test_cover.py  test_e2e_scenarios.py  test_entity_lifecycle.py  test_exceptions.py  test_init.py  test_integration_advanced_features.py  test_light.py  test_lock.py  test_sensor.py  test_switch.py
tests/fixtures/: panel.json
(+31 files in other folders)
